Closed
Bug 342237
Opened 20 years ago
Closed 19 years ago
disable view-source contextual menu item when viewing binary content
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino1.5
People
(Reporter: phiw2, Assigned: stuart.morgan+bugzilla)
References
Details
(Keywords: fixed1.8.1.1)
Attachments
(1 file, 1 obsolete file)
|
2.30 KB,
patch
|
jaas
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.9a1) Gecko/20060621 Camino/1.2+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.9a1) Gecko/20060621 Camino/1.2+
Bug 309132 disables the menu-item and the keyboard shortcut for 'view-source' when the page/tab only contains binary content. The contextual menu item is still active though, and allows to view source.
Reproducible: Always
Expected Results:
Contextual menu-item disabled when page only contains binary contents.
Updated•20 years ago
|
Assignee: nobody → bugzilla
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: disable view-source contextual menu when viewing binary content → disable view-source contextual menu item when viewing binary content
Target Milestone: --- → Camino1.1
| Assignee | ||
Comment 1•19 years ago
|
||
Fix. Depends on bug 159337.
Assignee: bugzilla → stuart.morgan
Status: NEW → ASSIGNED
Attachment #242468 -
Flags: review?(hwaara)
Comment 2•19 years ago
|
||
Comment on attachment 242468 [details] [diff] [review]
fix
An offtopic point: It'd be nice to see those spellcheck constants moved to an enum in the head of the file instead.
Attachment #242468 -
Flags: review?(hwaara) → review+
| Assignee | ||
Comment 3•19 years ago
|
||
Comment on attachment 242468 [details] [diff] [review]
fix
Subject to decision on and landing of bug 159337
Attachment #242468 -
Flags: superreview?(mikepinkerton)
Comment 4•19 years ago
|
||
Comment on attachment 242468 [details] [diff] [review]
fix
sr=pink
Attachment #242468 -
Flags: superreview?(mikepinkerton) → superreview+
Updated•19 years ago
|
Whiteboard: [needs checkin]
Comment 5•19 years ago
|
||
Comment on attachment 242468 [details] [diff] [review]
fix
This patch makes context menus that don't have a view source item not display on binary pages. ie:
1. View an image
2. Try to get the context menu for the image
Attachment #242468 -
Flags: review-
Updated•19 years ago
|
Whiteboard: [needs checkin]
Comment 6•19 years ago
|
||
The itemWithTarget method just needed an error case in its return statement (this is really smorgan's patch, just spun by me)
Attachment #242468 -
Attachment is obsolete: true
| Assignee | ||
Comment 7•19 years ago
|
||
Comment on attachment 243847 [details] [diff] [review]
fix
Just to dot the i's
Attachment #243847 -
Flags: superreview?(joshmoz)
Attachment #243847 -
Flags: superreview?(joshmoz) → superreview+
Whiteboard: [needs checkin]
Comment 8•19 years ago
|
||
Checked in on 1.8branch and trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1.1
Resolution: --- → FIXED
Whiteboard: [needs checkin]
| Reporter | ||
Updated•19 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•