Camino only - Bug 342237: Disable view-source contextual menu item when viewing binary content. Patch by smorgan <stuart.morgan@alumni.case.edu> r/sr=josh